2005-08-10  9:35 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithCellEdgeSplits) cleaned up to
	examine ring equators.

2005-08-10  9:35 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLineSegmentIntersectsFace) cleaned up
	
2005-08-09 19:00 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithCellEdgeSplits) junk from home
	* src/gridcad.c (gridLineSegmentIntersectsFace) junk from home
	
2005-08-09 18:30 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithCellEdgeSplits) started to
	explore the ring fill via grid generation.
	* src/gridcad.c (gridLineSegmentIntersectsFace) started to find
	side-CADface intersection.
	
2005-08-09 13:45 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithExisitingCellFaces) renamed from
	gridFillRingWithFaces. Try all segments before giving up.

2005-08-09 13:08 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) fixed duplicate
	add of new faces to prevent non-watertight boundaries.
	* src/gridinsert.c (gridFillRingWithFaces) increased the min face
	uv area to 1.0e-16

2005-08-09 12:19 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddTriangle) to test and fix bug with inconsistent
	node id's and uv values.

2005-08-09 10:08 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) to continue
	debugging, set the min face uv area to 1.0e-16 and allow 29,207 to
	continue.

2005-08-09 09:32 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) made an array
	of rings to include the through edge and the gap nodes in the
	subfaces.

2005-08-08 17:25 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) kick out for 29,207
	* src/gridinsert.c (gridFillRingWithFaces) debug cruff, try for
	opposite node in equator.

2005-08-08 17:18 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridFaceAreaUVDirect) direct way of getting